# litmask

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .releaserc.json  .taplo.toml  .tool-versions  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml  shell.nix
.cargo/: config.toml  (+1 more)
benches/litmask-bench/: Cargo.toml  build.rs
benches/litmask-bench/benches/: decrypt.rs
benches/litmask-bench/fixtures/: lit_256.txt  lit_4096.txt
benches/litmask-bench/src/: lib.rs
litmask/: CHANGELOG.md  Cargo.toml  build.rs
litmask-build/: CHANGELOG.md  Cargo.toml
litmask-build/src/: lib.rs
litmask-build/tests/: artifacts_have_consumers.rs
litmask-cli/: Cargo.toml
litmask-cli/src/: bind.rs  config.rs  exit.rs  inputs.rs  inspect.rs  main.rs
litmask-cli/tests/: bind.rs  cli.rs  inspect.rs
litmask-internal/: Cargo.toml  README.md
litmask-internal/proptest-regressions/: cipher.txt
litmask-internal/src/: aead.rs  base64url.rs  cipher.rs  config.rs  decrypt.rs  format_parser.rs  kdf.rs  lib.rs  machine_token.rs  nonce.rs  scan.rs  test_util.rs  tier.rs  weak.rs  wire.rs
litmask-internal/tests/: cipher_selection.rs
litmask-macros/: CHANGELOG.md  Cargo.toml  README.md
litmask-macros/src/: common.rs  derive_support.rs  init.rs  lib.rs  mask.rs  mask_all.rs  mask_concat.rs  mask_debug.rs  mask_deserialize.rs  mask_env.rs  mask_file.rs  mask_fmt.rs  mask_format.rs  mask_include_bytes.rs  mask_include_str.rs  mask_option_env.rs  mask_serialize.rs  mask_stack.rs  masked_serialize.rs  maskfmt.rs  serde_attrs.rs  unmasked.rs  weak_mask.rs
litmask-macros/src/common/: artifact.rs  codegen.rs  diagnostics.rs  mod.rs  parse.rs  path.rs  stack_limit.rs
litmask-macros/src/mask_all/: classify.rs  derives.rs  mod.rs  rewrite.rs  skip.rs
litmask-macros/src/mask_deserialize/: generics.rs  identifier.rs  named_fields.rs
litmask/examples/: README.md  byte_cstr_demo.rs  custom_provider.rs  envelope_provider.rs  file_provider.rs  hello_world.rs  hw_id_provider.rs  include_str_demo.rs  machine_id_provider.rs  mask_all_demo.rs  mask_debug_demo.rs  mask_eprint_e2e.rs  mask_fmt_demo.rs  mask_format_demo.rs  mask_macros_demo.rs  mask_print_e2e.rs  mask_serde_demo.rs  masked_serde_demo.rs  maskfmt_demo.rs  stack_demo.rs  static_provider.rs  weak_mask_demo.rs
litmask/examples/fixtures/: mask_all_include_str.txt  noc_list.txt  quote.txt  task13_include_str.txt
litmask/fuzz/: Cargo.toml
litmask/fuzz/corpus/locator_scan/: multi_match  no_match  single_match
litmask/fuzz/corpus/parse_format_template/: complex  dynamic  named  positional  spec
litmask/fuzz/fuzz_targets/: locator_scan.rs  parse_format_template.rs
litmask/src/: base64url.rs  cipher.rs  diagnostics.rs  error.rs  key.rs  lib.rs  macro_plumbing.rs  nonce.rs  provider.rs  runtime.rs  serde_support.rs
litmask/src/provider/: embedded.rs  env.rs  file.rs  hw_id.rs  machine_id.rs  mod.rs  static_key.rs  static_provider.rs
litmask/src/runtime/: cell.rs  governor.rs  mask_key_store.rs  mod.rs  stack.rs  weak.rs
litmask/tests/: compile.rs  embedded_provider.rs  example_scrub.rs  external_tier_e2e.rs  file_provider.rs  governed_masking.rs  governor_repeat_idempotent.rs  hw_id_provider.rs  init_after_lazy_guard.rs  init_after_lazy_refusal.rs  init_tier_check_e2e.rs  init_unsupported_format.rs  init_unsupported_format_cipher.rs  init_wrapper_tamper.rs  keygen_external_roundtrip.rs  lazy_higher_tier_refusal.rs  machine_external_tier_e2e.rs  machine_id_provider.rs  machine_tier_e2e.rs  mask_all.rs  mask_all_serde.rs  mask_all_strict.rs  mask_byte_cstring.rs  mask_concat.rs  mask_debug.rs  mask_deserialize.rs  mask_env.rs  mask_eprint.rs  mask_file.rs  mask_fmt.rs  mask_format.rs  mask_include_bytes.rs  mask_include_str.rs  mask_macro_inputs.rs  mask_option_env.rs  mask_panic.rs  mask_print.rs  mask_round_trip.rs  mask_serde_alias.rs  mask_serde_bound.rs  (+23 more)
litmask/tests/common/: mod.rs
litmask/tests/compile/: init_bare_removed.rs  init_bare_removed.stderr  init_external_against_embedded_seal.rs  init_external_against_embedded_seal.stderr  init_machine_external_against_embedded_seal.rs  init_machine_external_against_embedded_seal.stderr  init_machine_external_grammar_missing_provider.rs  init_machine_external_grammar_missing_provider.stderr  init_with_argument.rs  init_with_argument.stderr  mask_all_const_initializer_warning.rs  mask_all_const_initializer_warning.stderr  mask_all_nested_module_pattern_warning.rs  mask_all_nested_module_pattern_warning.stderr  mask_all_non_module_target.rs  mask_all_non_module_target.stderr  mask_all_pattern_warning.rs  mask_all_pattern_warning.stderr  mask_all_static_initializer_warning.rs  mask_all_static_initializer_warning.stderr  mask_all_strict_non_literal_template_error.rs  mask_all_strict_non_literal_template_error.stderr  mask_all_strict_pattern_error.rs  mask_all_strict_pattern_error.stderr  mask_all_user_macro_raw_warning.rs  mask_all_user_macro_raw_warning.stderr  mask_all_user_macro_warning.rs  mask_all_user_macro_warning.stderr  mask_concat_empty.rs  mask_concat_empty.stderr  mask_concat_invalid_arg.rs  mask_concat_invalid_arg.stderr  mask_concat_mixed_kinds.rs  mask_concat_mixed_kinds.stderr  mask_concat_only_bytes.rs  mask_concat_only_bytes.stderr  mask_concat_only_cstrs.rs  mask_concat_only_cstrs.stderr  mask_concat_rejects_unmasked.rs  mask_concat_rejects_unmasked.stderr  (+148 more)
litmask/tests/external_fixture/: Cargo.toml  build.rs
litmask/tests/external_fixture/src/: main.rs
litmask/tests/init_after_lazy_fixture/: Cargo.toml  build.rs
litmask/tests/init_after_lazy_fixture/src/: main.rs
litmask/tests/init_mismatch_fixture/: Cargo.toml  build.rs
litmask/tests/init_unset_fixture/: Cargo.toml  build.rs
litmask/tests/lazy_higher_tier_fixture/: Cargo.toml  build.rs
litmask/tests/machine_external_fixture/: .gitignore  Cargo.toml  build.rs
litmask/tests/machine_fixture/: Cargo.toml  build.rs
(+45 files in other folders)
