[workspace]
resolver = "2"
members = [
  "litmask",
  "litmask-build",
  "litmask-cli",
  "litmask-internal",
  "litmask-macros",
]

[workspace.package]
version = "0.17.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camercu/litmask"
keywords = ["obfuscation", "encryption", "string-literals", "compile-time"]
categories = ["cryptography", "no-std"]
# crates.io publish is intentionally disabled at the workspace level.
# Two effects:
# (1) cargo publish errors out unconditionally for every member — the
#     `.releaserc.json` `publish: false` is the soft equivalent; this
#     adds a hard guard at the manifest level.
# (2) cargo-deny's `allow-wildcard-paths = true` in deny.toml only
#     applies to non-public crates, so the workspace.dependencies
#     entries (which carry no version field) pass the wildcards lint.
# To enable publishing: flip to `publish = true` here, add explicit
# `version = "X.Y.Z"` to each `[workspace.dependencies]` entry, and
# flip `.releaserc.json`'s `semantic-release-cargo` `publish` field.
publish = false

# Path-only inter-workspace dependencies. Member crates use
# `dep.workspace = true` to inherit the path. Versions are deliberately
# absent: `cargo set-version --workspace` (driven by
# semantic-release-cargo on each release) only bumps
# `[workspace.package].version` and would leave any explicit pins here
# stale, breaking `cargo check` on the next bump. `path = "..."` alone
# is sufficient for workspace resolution; a `version` field is only
# required when publishing to a registry (and `publish = false` in
# `.releaserc.json` skips that path).
[workspace.dependencies]
# Cipher selection (§1.5.1): the runtime crate picks one cipher via
# `default-features = false` + explicit feature in `litmask`'s own
# Cargo.toml. `litmask-cli` does the same with both ciphers enabled.
# `default-features = false` here keeps member crates in charge of
# their own feature selection rather than inheriting whatever
# litmask-internal's default happens to be.
litmask-internal = { path = "litmask-internal", default-features = false }
litmask-macros = { path = "litmask-macros", default-features = false }
litmask-build = { path = "litmask-build", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Recommended deployment profile for litmask consumers. Strips symbols
# and debug info so type names and other identifiable strings don't
# leak into the compiled artifact. The dirty-word scrub integration
# test exercises this profile to verify the library does not contribute
# litmask-identifying plaintext under recommended settings.
[profile.release]
strip = "symbols"
debug = false
panic = "abort"
lto = true
