[workspace]
resolver = "2"
members = [
  "litmask",
  "litmask-build",
  "litmask-cli",
  "litmask-internal",
  "litmask-macros",
]

[workspace.package]
version = "0.17.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/camercu/litmask"
keywords = ["obfuscation", "encryption", "string-literals", "compile-time"]
categories = ["cryptography", "no-std"]
# crates.io publishing is enabled. The intra-workspace dependencies below
# carry explicit `version` requirements (cargo strips `path` on publish and
# resolves the registry version), so cargo-deny's `allow-wildcard-paths` no
# longer applies — they are versioned, not wildcards. Automated publishing
# is driven by `.releaserc.json`'s `semantic-release-cargo` `publish` field.
publish = true

# Intra-workspace dependencies: dual `path` + `version`. The `version` is
# required for registry publish; the caret range tolerates the lockstep
# bump that `semantic-release-cargo` applies via `cargo set-version` on each
# release, so a published `litmask 0.17.x` still resolves its siblings.
# Member crates inherit these via `dep.workspace = true`.
[workspace.dependencies]
# Cipher selection (§1.5.1): the runtime crate picks one cipher via
# `default-features = false` + explicit feature in `litmask`'s own
# Cargo.toml. `litmask-cli` does the same with both ciphers enabled.
# `default-features = false` here keeps member crates in charge of
# their own feature selection rather than inheriting whatever
# litmask-internal's default happens to be.
litmask-internal = { path = "litmask-internal", version = "0.17.1", default-features = false }
litmask-macros = { path = "litmask-macros", version = "0.17.1", default-features = false }
litmask-build = { path = "litmask-build", version = "0.17.1", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Recommended deployment profile for litmask consumers. Strips symbols
# and debug info so type names and other identifiable strings don't
# leak into the compiled artifact. The dirty-word scrub integration
# test exercises this profile to verify the library does not contribute
# litmask-identifying plaintext under recommended settings.
[profile.release]
strip = "symbols"
debug = false
panic = "abort"
lto = true
