[package]
name = "litmask-build"
description = "Build-script helper for the litmask crate; generates compile-time keys and writes litmask.config."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["src/**/*"]

[dependencies]
litmask-internal = { path = "../litmask-internal", version = "=0.1.0" }
base64ct = { version = "1", features = ["alloc"] }
rand_chacha = "0.3"
rand_core = "0.6"
getrandom = "0.2"
toml = "0.8"
zeroize = "1"

[lints]
workspace = true
