[package]
name = "litmask-build"
description = "Build-script helper for the litmask crate; generates compile-time keys and writes litmask.config."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
include = ["src/**/*"]

[dependencies]
litmask-internal.workspace = true
rand_chacha = "0.10"
rand_core = "0.10"
getrandom = "0.4"
toml = "1.1"
zeroize = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
