[package]
name = "litmask-cli"
description = "Command-line companion to the litmask crate; reports the host machine ID for machine-tier sealing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
# Shared workspace README; `cargo` flattens the parent path into the
# package root on publish. LICENSE-* are symlinks to the workspace-root
# originals that `cargo` dereferences into the package.
readme = "../README.md"
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE"]

[dependencies]
# `derive` enables the `#[derive(Parser)]` macro that drives the
# CLI's argument schema. `clap` is the de-facto Rust CLI parser
# (used by cargo itself); pulling it in eliminates the hand-rolled
# parser's edge cases (--help, --version, --flag=value, GNU-typical
# ordering) without reinventing them.
clap = { version = "4", features = ["derive"] }
machine-uid = "0.6"

[[bin]]
name = "litmask"
path = "src/main.rs"

[lints]
workspace = true
