[package]
name = "litmask-internal"
description = "INTERNAL — shared crypto primitives, wire-format constants, and pure helpers used by litmask, litmask-build, and litmask-macros. Not a public API; do not depend on this crate directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
include = ["src/**/*"]

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
blake3 = { version = "1", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = [
  "alloc",
] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
