[package]
name = "litmask-internal"
description = "INTERNAL — shared crypto primitives, wire-format constants, and pure helpers used by litmask, litmask-build, and litmask-macros. Not a public API; do not depend on this crate directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
include = ["src/**/*"]

[features]
# Both cipher backends are opt-in deps so the runtime crate
# (`litmask`) can pull in exactly one — the property §1.5.1 calls
# out as "exactly one cipher per build". `litmask-cli` enables both
# (per the §1.5.1 amendment) and dispatches at runtime based on the
# wrapper's cipher-id byte.
default = ["chacha20-poly1305"]
chacha20-poly1305 = ["dep:chacha20poly1305"]
aes-gcm = ["dep:aes-gcm"]

[dependencies]
aes-gcm = { version = "0.10", default-features = false, features = [
  "alloc",
  "aes",
], optional = true }
base64ct = { version = "1", features = ["alloc"] }
blake3 = { version = "1", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = [
  "alloc",
], optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
