[package]
name = "litmask-internal"
description = "INTERNAL — shared crypto primitives, wire-format constants, and pure helpers used by litmask, litmask-build, and litmask-macros. Not a public API; do not depend on this crate directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
# Dedicated short README (this crate is internal; the main litmask
# usage README would mislead). LICENSE-* are symlinks to the
# workspace-root originals that `cargo` dereferences into the package.
readme = "README.md"
include = ["src/**/*", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[features]
# Both cipher backends are opt-in deps so the runtime crate
# (`litmask`) can pull in exactly one — the property §1.5.1 calls
# out as "exactly one cipher per build".
default = ["chacha20-poly1305"]
chacha20-poly1305 = ["dep:chacha20poly1305"]
aes-gcm = ["dep:aes-gcm"]
# In-memory wrapper/blob builders (`test_util`) for cross-crate tests.
# Test-only surface; needs a selected cipher (`CURRENT_CIPHER`).
test-util = []

[dependencies]
aes-gcm = { version = "0.10", default-features = false, features = [
  "alloc",
  "aes",
], optional = true }
base64ct = { version = "1", features = ["alloc"] }
blake3 = { version = "1", default-features = false, features = ["pure"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = [
  "alloc",
], optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true

# See `litmask/Cargo.toml`'s `[package.metadata.docs.rs]` for the
# rationale: enable every feature when rendering docs so the
# `aes-gcm`-only `CURRENT_CIPHER` constant and the wrapper-parse
# helpers under both cipher gates are documented.
[package.metadata.docs.rs]
all-features = true
