[package]
name = "litmask-macros"
description = "Internal proc-macro crate for litmask. Re-exported by the litmask runtime crate; not meant to be depended on directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
include = ["src/**/*"]

[lib]
proc-macro = true

[dependencies]
litmask-internal.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
blake3 = "1"
zeroize = "1"

[lints]
workspace = true
