[package]
name = "litmask-macros"
description = "Internal proc-macro crate for litmask. Re-exported by the litmask runtime crate; not meant to be depended on directly."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
include = ["src/**/*"]

[lib]
proc-macro = true

[features]
# Feature passthrough for cipher selection (§1.5.1). The runtime
# crate (`litmask`) enables one of these to align proc-macro
# encryption with runtime decryption.
default = ["chacha20-poly1305"]
chacha20-poly1305 = ["litmask-internal/chacha20-poly1305"]
aes-gcm = ["litmask-internal/aes-gcm"]

[dependencies]
litmask-internal.workspace = true
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
blake3 = { version = "1", default-features = false, features = ["pure"] }
zeroize = "1"

[lints]
workspace = true

# See `litmask/Cargo.toml`'s `[package.metadata.docs.rs]` for the
# rationale: enable every feature on docs.rs so the cipher-gated
# encryption paths in proc-macro expansion are documented under
# both ciphers.
[package.metadata.docs.rs]
all-features = true
