[package]
name = "litmask"
description = "Compile-time string literal obfuscation with runtime decryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"
# Explicit allowlist for `cargo publish`. `tests/` is dev-only (runs in
# this workspace's CI, not for downstream consumers) and is excluded to
# keep the published crate small; `examples/` ships so the rendered
# docs.rs page can link to working samples.
include = ["src/**/*", "build.rs", "examples/**/*"]

[features]
default = ["std"]
std = []
# Currently a no-op marker: the runtime crate is always #![no_std] + alloc.
# Listed for forward compatibility and so the spec-mandated acceptance
# command `cargo build -p litmask --no-default-features --features alloc`
# is the natural invocation. Task 23 may attach real content to it
# (e.g., once_cell::race::OnceBox under no_std).
alloc = []
# Pulls in `machine-uid` for `HardwareIdProvider` (§2.5.4, §1.6.5).
# Opt-in only: the dependency adds platform-specific code paths and a
# transitive `winreg`/`uuid` graph on Windows, which downstream users
# without a hardware-bound deployment have no reason to compile.
hw-id = ["dep:machine-uid"]

[dependencies]
litmask-internal.workspace = true
litmask-macros.workspace = true
blake3 = { version = "1", default-features = false }
machine-uid = { version = "0.6", optional = true }
once_cell = { version = "1", default-features = false, features = [
  "race",
  "alloc",
] }
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
litmask-build.workspace = true

# `hw_id_provider` exercises HardwareIdProvider, which only exists
# under the `hw-id` feature. Pinning it via `required-features` means
# `cargo build --examples` (no features) skips it cleanly instead of
# failing with E0432 / E0599, and `cargo run --example hw_id_provider
# --features hw-id` resolves correctly.
[[example]]
name = "hw_id_provider"
required-features = ["hw-id"]

[dev-dependencies]
proptest = "1"
regex = "1"
trybuild = "1"

[lints]
workspace = true
