[package]
name = "litmask"
description = "Compile-time string literal obfuscation with runtime decryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"
# Explicit allowlist for `cargo publish`. `tests/` is dev-only (runs in
# this workspace's CI, not for downstream consumers) and is excluded to
# keep the published crate small; `examples/` ships so the rendered
# docs.rs page can link to working samples.
include = ["src/**/*", "build.rs", "examples/**/*"]

[features]
# Cipher selection (§1.5.1). Default pulls in ChaCha20-Poly1305 via
# `litmask-internal/chacha20-poly1305`; the `aes-gcm` feature flips
# to AES-256-GCM. To swap ciphers without dragging the default
# cipher into the dep tree:
#
#   cargo build -p litmask --no-default-features --features std,aes-gcm
#
# Cargo's feature-unification model does not let `--features aes-gcm`
# alone suppress the default `chacha20-poly1305`; users targeting the
# single-cipher property (§1.5.1, "exactly one cipher per build")
# pass `--no-default-features` explicitly.
default = ["std", "chacha20-poly1305"]
std = []
chacha20-poly1305 = [
  "litmask-internal/chacha20-poly1305",
  "litmask-build/chacha20-poly1305",
  "litmask-macros/chacha20-poly1305",
]
aes-gcm = [
  "litmask-internal/aes-gcm",
  "litmask-build/aes-gcm",
  "litmask-macros/aes-gcm",
]
# The `alloc` feature marks the no_std + alloc build target. It
# transitively enables a cipher because `litmask-internal` cannot
# compile without one (the AEAD primitives are the whole point of
# the crate). ChaCha20-Poly1305 is the default choice because it
# avoids the AES-NI / ARMv8-Crypto hardware-acceleration coupling
# that `aes-gcm` benefits from on hosted platforms — a more
# conservative default for the embedded targets `--features alloc`
# is meant to serve. Users targeting embedded AES can still opt in
# via `--features alloc,aes-gcm` (aes-gcm precedence rule applies).
alloc = ["chacha20-poly1305"]
# Pulls in `machine-uid` for `HardwareIdProvider` (§2.5.4, §1.6.5).
# Opt-in only: the dependency adds platform-specific code paths and a
# transitive `winreg`/`uuid` graph on Windows, which downstream users
# without a hardware-bound deployment have no reason to compile.
# `std` is load-bearing because `machine-uid` requires it for its
# file-system identity probes (`/etc/machine-id`, Windows registry,
# etc.). Making the dependency explicit keeps `hw-id` from being a
# feature combination that compiles half the time. `weak_mask!()`
# itself works under `no_std + alloc` via the `WeakCell` shim
# (see `litmask::runtime::WeakCell`).
hw-id = ["std", "dep:machine-uid"]

[dependencies]
litmask-internal.workspace = true
litmask-macros.workspace = true
blake3 = { version = "1", default-features = false }
machine-uid = { version = "0.6", optional = true }
once_cell = { version = "1", default-features = false, features = [
  "race",
  "alloc",
] }
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
litmask-build.workspace = true

# `hw_id_provider` exercises HardwareIdProvider, which only exists
# under the `hw-id` feature. Pinning it via `required-features` means
# `cargo build --examples` (no features) skips it cleanly instead of
# failing with E0432 / E0599, and `cargo run --example hw_id_provider
# --features hw-id` resolves correctly.
[[example]]
name = "hw_id_provider"
required-features = ["hw-id"]

[dev-dependencies]
proptest = "1"
regex = "1"
trybuild = "1"

[lints]
workspace = true

# docs.rs renders every feature-gated symbol (HardwareIdProvider under
# `hw-id`, the aes-gcm cipher path under `aes-gcm`, etc.) so users see
# the full API surface instead of just the default-features subset.
# `just doc` mirrors this with `--all-features` to keep local doc
# output aligned with the published page.
[package.metadata.docs.rs]
all-features = true
