[package]
name = "litmask"
description = "Compile-time string literal obfuscation with runtime decryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"
# Shared workspace README; `cargo` flattens the parent path into the
# package root on publish so the crates.io page renders it.
readme = "../README.md"
# Explicit allowlist for `cargo publish`. `tests/` is dev-only (runs in
# this workspace's CI, not for downstream consumers) and is excluded to
# keep the published crate small; `examples/` ships so the rendered
# docs.rs page can link to working samples. The LICENSE-* entries are
# symlinks to the workspace-root originals (dual MIT/Apache-2.0) that
# `cargo` dereferences into the package.
include = [
  "src/**/*",
  "build.rs",
  "examples/**/*",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[features]
# Cipher selection (§1.5.1). Default pulls in ChaCha20-Poly1305 via
# `litmask-internal/chacha20-poly1305`; the `aes-gcm` feature flips
# to AES-256-GCM. To swap ciphers without dragging the default
# cipher into the dep tree:
#
#   cargo build -p litmask --no-default-features --features std,aes-gcm
#
# Cargo's feature-unification model does not let `--features aes-gcm`
# alone suppress the default `chacha20-poly1305`; users targeting the
# single-cipher property (§1.5.1, "exactly one cipher per build")
# pass `--no-default-features` explicitly.
default = ["std", "chacha20-poly1305"]
std = []
chacha20-poly1305 = [
  "litmask-internal/chacha20-poly1305",
  "litmask-build/chacha20-poly1305",
  "litmask-macros/chacha20-poly1305",
]
aes-gcm = [
  "litmask-internal/aes-gcm",
  "litmask-build/aes-gcm",
  "litmask-macros/aes-gcm",
]
# The `alloc` feature marks the no_std + alloc build target. It
# transitively enables a cipher because `litmask-internal` cannot
# compile without one (the AEAD primitives are the whole point of
# the crate). ChaCha20-Poly1305 is the default choice because it
# avoids the AES-NI / ARMv8-Crypto hardware-acceleration coupling
# that `aes-gcm` benefits from on hosted platforms — a more
# conservative default for the embedded targets `--features alloc`
# is meant to serve. Users targeting embedded AES can still opt in
# via `--features alloc,aes-gcm` (aes-gcm precedence rule applies).
alloc = ["chacha20-poly1305"]
# Pulls in `machine-uid` for `MachineIdProvider` (§2.5.4, §1.6.5).
# Opt-in only: the dependency adds platform-specific code paths and a
# transitive `winreg`/`uuid` graph on Windows, which downstream users
# without a machine-ID-bound deployment have no reason to compile.
# `std` is load-bearing because `machine-uid` requires it for its
# file-system identity probes (`/etc/machine-id`, Windows registry,
# etc.). Making the dependency explicit keeps `machine-id` from being a
# feature combination that compiles half the time. `weak_mask!()`
# itself works under `no_std + alloc` via the `WeakCell` shim
# (see `litmask::runtime::WeakCell`).
machine-id = ["std", "dep:machine-uid"]
# EXPERIMENTAL masked serde integration (`#[derive(MaskSerialize)]`):
# field and struct names are AEAD-masked at compile time and leak-cached
# at first serialize. The `unstable-` prefix is the semver-exemption
# signal — this surface may change or vanish in any release until it
# stabilizes as `serde`. `std` is load-bearing — the generated impl
# caches decrypted names in `std::sync::OnceLock`.
unstable-serde = ["std", "dep:serde", "litmask-macros/unstable-serde"]
# Build gate for the `file_provider` / `weak_mask_demo` examples (see
# their `[[example]]` entries). Carries no code — it exists only so
# `required-features` can keep those two examples out of the default
# workspace build, which seals Embedded and would trip `init!`'s
# form↔tier cross-check on their `init!(provider)` (External form).
provider-examples = []

[dependencies]
litmask-internal.workspace = true
litmask-macros.workspace = true
machine-uid = { version = "0.6", optional = true }
once_cell = { version = "1", default-features = false, features = [
  "race",
  "alloc",
] }
serde = { version = "1", optional = true }
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
litmask-build.workspace = true

# `machine_id_provider` exercises MachineIdProvider, which only exists
# under the `machine-id` feature. Pinning it via `required-features` means
# `cargo build --examples` (no features) skips it cleanly instead of
# failing with E0432 / E0599, and `cargo run --example machine_id_provider
# --features machine-id` resolves correctly.
[[example]]
name = "machine_id_provider"
required-features = ["machine-id"]

# Same `required-features` rationale as above: skip cleanly under
# `cargo build --examples` with default features instead of failing.
[[example]]
name = "mask_serde_demo"
required-features = ["unstable-serde"]

# `file_provider` and `weak_mask_demo` pass a runtime `KeyProvider` to
# `init!` (the External form, `init!(provider)`), which only compiles
# against an externally-sealed build. The default workspace build seals
# Embedded, so building them there trips `init!`'s form↔tier
# cross-check. Gating on the no-op `provider-examples` feature skips
# them under default `cargo build --all-targets`; `scripts/test-examples.sh`
# enables the feature with `LITMASK_UNLOCK_KEY` set (which reseals to
# External, so the tier then matches) to build and run them.
[[example]]
name = "file_provider"
required-features = ["provider-examples"]

[[example]]
name = "weak_mask_demo"
required-features = ["provider-examples"]

[dev-dependencies]
litmask-internal.workspace = true
postcard = { version = "1.1.3", features = [
  "use-std",
], default-features = false }
proptest = "1"
regex = "1"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trybuild = "1"

[lints]
workspace = true

# docs.rs renders every feature-gated symbol (MachineIdProvider under
# `machine-id`, the aes-gcm cipher path under `aes-gcm`, etc.) so users see
# the full API surface instead of just the default-features subset.
# `just doc` mirrors this with `--all-features` to keep local doc
# output aligned with the published page.
[package.metadata.docs.rs]
all-features = true
