[package]
name = "litmask-bench"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# `test-util` exposes the cache-reset hook the first-use benchmark needs
# to re-measure the one-time unlock per sample.
litmask = { path = "../../litmask", features = ["test-util"] }

[build-dependencies]
litmask-build = { path = "../../litmask-build" }

[[bench]]
name = "decrypt"
harness = false

[dev-dependencies]
divan = "0.1.21"
