[package]
name = "litmask-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
litmask-internal = { path = "../../litmask-internal", features = [
  "chacha20-poly1305",
] }

[[bin]]
name = "parse_format_template"
path = "fuzz_targets/parse_format_template.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
