# Standalone one-crate workspace for the External-tier e2e test
# (`litmask/tests/external_tier_e2e.rs`). The empty `[workspace]` table
# detaches this crate from the parent litmask workspace so building it
# with `LITMASK_UNLOCK_KEY` set seals only THIS crate's `external` tier,
# never the litmask crate's own embedded build in the shared target dir.
[workspace]

[package]
name = "litmask_external_fixture"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
litmask = { path = "../.." }

[build-dependencies]
litmask-build = { path = "../../../litmask-build" }
