# Standalone one-crate workspace for the `init!` form↔tier mismatch
# compile-failure test (`litmask/tests/init_tier_check_e2e.rs`). The empty
# `[workspace]` table detaches this crate from the parent litmask
# workspace so building it with `LITMASK_UNLOCK_KEY` set seals only THIS
# crate's `external` tier. The source calls the Embedded-form `init!()`,
# so an `external` seal makes the build fail the form↔tier cross-check —
# which is exactly what the test asserts.
[workspace]

[package]
name = "litmask_init_mismatch_fixture"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
litmask = { path = "../.." }

[build-dependencies]
litmask-build = { path = "../../../litmask-build" }
