# Standalone one-crate workspace for the higher-tier lazy-init refusal
# e2e test (`litmask/tests/lazy_higher_tier_refusal.rs`). The empty
# `[workspace]` table detaches this crate from the parent litmask
# workspace so building it with `LITMASK_UNLOCK_KEY` set seals only THIS
# crate's `external` tier, never the litmask crate's own embedded build
# in the shared target dir.
[workspace]

[package]
name = "litmask_lazy_higher_tier_fixture"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
litmask = { path = "../.." }

[build-dependencies]
litmask-build = { path = "../../../litmask-build" }
